[@mantine/core] ScrollArea: Fix incorrect scrollbars styles (#4904)

--- a/packages/@mantine/core/src/components/ScrollArea/ScrollArea.module.css
+++ b/packages/@mantine/core/src/components/ScrollArea/ScrollArea.module.css
@@ -18,20 +18,26 @@
     display: none;
   }
 
-  &[data-offset-scrollbars='xy'],
-  &[data-offset-scrollbars='y'] {
-    --_viewport-padding-right: var(--scrollarea-scrollbar-size);
-    --_viewport-padding-left: unset;
+  &[data-scrollbars='xy'],
+  &[data-scrollbars='y'] {
+    &[data-offset-scrollbars='xy'],
+    &[data-offset-scrollbars='y'] {
+      --_viewport-padding-right: var(--scrollarea-scrollbar-size);
+      --_viewport-padding-left: unset;
 
-    @mixin rtl {
-      --_viewport-padding-right: unset;
-      --_viewport-padding-left: var(--scrollarea-scrollbar-size);
+      @mixin rtl {
+        --_viewport-padding-right: unset;
+        --_viewport-padding-left: var(--scrollarea-scrollbar-size);
+      }
     }
   }
 
-  &[data-offset-scrollbars='xy'],
-  &[data-offset-scrollbars='x'] {
-    --_viewport-padding-bottom: var(--scrollarea-scrollbar-size);
+  &[data-scrollbars='xy'],
+  &[data-scrollbars='x'] {
+    &[data-offset-scrollbars='xy'],
+    &[data-offset-scrollbars='x'] {
+      --_viewport-padding-bottom: var(--scrollarea-scrollbar-size);
+    }
   }
 }
 
